[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ffreplex"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "rich"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ffreplex"]
exclude = []
namespaces = false

# Enables the usage of setuptools_scm
[tool.setuptools_scm]
