[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ffreplex"
requires-python = "=3.11"
dynamic = ["version"]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["ffreplex"]
exclude = []
namespaces = false

[tools.py2app.bundle.main]
script = "ffreplex/__init__.py"
name = "FFReplex"
argv-emulator = true

# Enables the usage of setuptools_scm
[tool.setuptools_scm]
